--- a/index.html
+++ b/index.html
@@ -54,7 +54,51 @@
       </div>
       <div class="header__order-box">
         <a href="#" class="header__order-link">order online</a>
+        <span class="header__order-arrow">&#8594;</span>
       </div>
     </header>
+
+    <section class="section-menu">
+      <h2 class="heading-secondary">la rosa</h2>
+      <div class="menu">
+        <ul class="menu__navigation">
+          <li class="menu__item"><a href="#" class="menu__link">tacos</a></li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">burritos</a>
+          </li>
+          <li class="menu__item"><a href="#" class="menu__link">gordo</a></li>
+        </ul>
+      </div>
+      <div class="menu__showcase">
+        <div class="menu__image-box">
+          <img src="" alt="" class="menu__image-taco--1" />
+          <p class="menu__item-name">bean & cheese</p>
+          <p class="menu__item-price">
+            $<span class="first-number">3</span>.65
+          </p>
+        </div>
+        <div class="menu__image-box">
+          <img src="" alt="" class="menu__image-taco--2" />
+          <p class="menu__item-name">chicken</p>
+          <p class="menu__item-price">
+            $<span class="first-number">3</span>.85
+          </p>
+        </div>
+        <div class="menu__image-box">
+          <img src="" alt="" class="menu__image-taco--3" />
+          <p class="menu__item-name">carnitas</p>
+          <p class="menu__item-price">
+            $<span class="first-number">3</span>.85
+          </p>
+        </div>
+      </div>
+      <div class="menu__order-box">
+        <a href="#" class="menu__order">addd to order</a>
+        <span class="menu__oder-arrow">&rarr;</span>
+      </div>
+      <div class="menu__car-box">
+        <img src="/assets/img/car.jpg" alt="" class="menu__car" />
+      </div>
+    </section>
   </body>
 </html>
