Finished menu section. Finished menu selecting function. Half way finish locations section

--- a/index.html
+++ b/index.html
@@ -59,46 +59,129 @@
     </header>
 
     <section class="section-menu">
-      <h2 class="heading-secondary">la rosa</h2>
+      <h2 class="heading-secondary u-margin-bottom-big">la rosa</h2>
       <div class="menu">
         <ul class="menu__navigation">
-          <li class="menu__item"><a href="#" class="menu__link">tacos</a></li>
           <li class="menu__item">
-            <a href="#" class="menu__link">burritos</a>
+            <a href="#" class="menu__link">t<br />a<br />c<br />o<br />s</a>
           </li>
-          <li class="menu__item"><a href="#" class="menu__link">gordo</a></li>
+          <li class="menu__item">
+            <a href="#" class="menu__link"
+              >b<br />u<br />r<br />r<br />i<br />t<br />o<br />s</a
+            >
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">g<br />o<br />r<br />d<br />o</a>
+          </li>
         </ul>
       </div>
       <div class="menu__showcase">
         <div class="menu__image-box">
-          <img src="" alt="" class="menu__image-taco--1" />
+          <img
+            src="/assets/img/taco-bean.jpg"
+            alt=""
+            class="menu__image menu__image-taco--1 menu__image--active"
+          />
           <p class="menu__item-name">bean & cheese</p>
           <p class="menu__item-price">
-            $<span class="first-number">3</span>.65
+            $<span class="first-number">3</span><span>65</span>
           </p>
         </div>
         <div class="menu__image-box">
-          <img src="" alt="" class="menu__image-taco--2" />
+          <img
+            src="/assets/img/taco-chicken.jpg"
+            alt=""
+            class="menu__image menu__image-taco--2"
+          />
           <p class="menu__item-name">chicken</p>
           <p class="menu__item-price">
-            $<span class="first-number">3</span>.85
+            $<span class="first-number">3</span><span>85</span>
           </p>
         </div>
         <div class="menu__image-box">
-          <img src="" alt="" class="menu__image-taco--3" />
+          <img
+            src="/assets/img/taco-carnitas.jpg"
+            alt=""
+            class="menu__image menu__image-taco--3"
+          />
           <p class="menu__item-name">carnitas</p>
           <p class="menu__item-price">
-            $<span class="first-number">3</span>.85
+            <span>$</span><span class="first-number">3</span><span>85</span>
           </p>
         </div>
       </div>
-      <div class="menu__order-box">
-        <a href="#" class="menu__order">addd to order</a>
-        <span class="menu__oder-arrow">&rarr;</span>
-      </div>
-      <div class="menu__car-box">
-        <img src="/assets/img/car.jpg" alt="" class="menu__car" />
+      <div class="menu__bottom">
+        <div class="menu__order-box">
+          <a href="#" class="menu__order">add to order</a>
+          <span class="menu__order-arrow">&rarr;</span>
+        </div>
+        <div class="menu__car-box">
+          <img src="/assets/img/car.png" alt="" class="menu__car" />
+        </div>
       </div>
     </section>
+
+    <section class="section-locations">
+      <h2 class="heading-secondary u-margin-bottom-small">locations</h2>
+      <div class="location">
+        <div class="location__details">
+          <h3 class="location__heading">clement street</h3>
+          <p class="location__address">
+            2252 clement street <br />
+            san francisco, CA 94122 <br />
+            (415) 387-4484
+          </p>
+        </div>
+        <div class="location__details">
+          <h3 class="location__heading">9th avenue</h3>
+          <p class="location__address">
+            1239 9th avenue <br />
+            san francisco, CA 94122 <br />
+            (415) 566-6011
+          </p>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location__details">
+          <h3 class="location__heading">geary street</h3>
+          <p class="location__address">
+            5450 geary boulevard <br />
+            san francisco, CA 94121 <br />
+            (415) 668-8226
+          </p>
+        </div>
+        <div class="location__details">
+          <h3 class="location__heading">albany</h3>
+          <p class="location__address">
+            1423 solano avenue <br />
+            albany, CA <br />
+            (510) 528-8226
+          </p>
+        </div>
+        <div class="location__details">
+          <h3 class="location__heading">college avenue</h3>
+          <p class="location__address">
+            2989 solano avenue <br />
+            albany, CA <br />
+            (510) 204-9027
+          </p>
+        </div>
+        <div class="location__details">
+          <h3 class="location__heading">telegraph</h3>
+          <p class="location__address">
+            2404 solano avenue <br />
+            berkeley, CA <br />
+            (510) 845-8226
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section-restaurant">
+      &nbsp;
+    </section>
+    <footer class="footer">
+      <div class="footer__logo-box"></div>
+    </footer>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
