--- a/index.html
+++ b/index.html
@@ -62,16 +62,18 @@
       <h2 class="heading-secondary u-margin-bottom-big">la rosa</h2>
       <div class="menu">
         <ul class="menu__navigation">
-          <li class="menu__item">
-            <a href="#" class="menu__link">t<br />a<br />c<br />o<br />s</a>
+          <li class="menu__item menu__item--active">
+            <a class="menu__link">t<br />a<br />c<br />o<br />s</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link"
+            <a class="menu__link"
               >b<br />u<br />r<br />r<br />i<br />t<br />o<br />s</a
             >
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">g<br />o<br />r<br />d<br />o</a>
+            <a class="menu__link"
+              >h<br />a<br />m<br />b<br />u<br />r<br />g<br />e<br />r<br />s</a
+            >
           </li>
         </ul>
       </div>
@@ -80,7 +82,7 @@
           <img
             src="/assets/img/taco-bean.jpg"
             alt=""
-            class="menu__image menu__image-taco--1 menu__image--active"
+            class="menu__image menu__image--1 menu__image--active"
           />
           <p class="menu__item-name">bean & cheese</p>
           <p class="menu__item-price">
@@ -91,7 +93,7 @@
           <img
             src="/assets/img/taco-chicken.jpg"
             alt=""
-            class="menu__image menu__image-taco--2"
+            class="menu__image menu__image--2"
           />
           <p class="menu__item-name">chicken</p>
           <p class="menu__item-price">
@@ -102,7 +104,7 @@
           <img
             src="/assets/img/taco-carnitas.jpg"
             alt=""
-            class="menu__image menu__image-taco--3"
+            class="menu__image menu__image--3"
           />
           <p class="menu__item-name">carnitas</p>
           <p class="menu__item-price">
@@ -173,6 +175,60 @@
             berkeley, CA <br />
             (510) 845-8226
           </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-intro">
+      <div class="introduction">
+        <div class="introduction__image-box introduction__image-box--1">
+          <img
+            src="/assets/img/logo-white.jpg"
+            alt=""
+            class="introduction__image"
+          />
+        </div>
+        <div class="introduction__details introduction__details--1">
+          <h3 class="introduction__heading u-margin-bottom-small">
+            tacos from heaven<br />since 77
+          </h3>
+          <p class="introduction__story--main u-margin-bottom-small">
+            Gordo Taqueria (known by many as Gordo's) hasn't changed a bit since
+            it first opened on Clement Street and 24th Avenue in 1977; and
+            whether for price, taste or nostalgia, that's fine by its
+            loyal-as-ever customers.
+          </p>
+          <p class="introduction__story--sub">
+            The Gordo's burrito is a staple of the Richmond District diet and
+            has amassed a following throughout the Bay Area. Co-owners Manuel
+            Hermandez and Dick Yamagami operate six locations-three in San
+            Francisco, one in Albany and two in Berkeley.
+          </p>
+        </div>
+      </div>
+      <div class="introduction">
+        <div class="introduction__details introduction__details--2">
+          <p class="introduction__story--sub u-margin-bottom-small">
+            The original Clement Street location looks just as it did in the
+            '80s'. "Everything's almost exactly the same," Hernandez said. "No
+            room to change much in there."
+          </p>
+          <p class="introduction__story--sub u-margin-bottom-small">
+            Kitchen included, the restaurant is about 300 square feet. The line
+            is still long, the bulletin board still cluttered, and children
+            still dangle their feet from the wood and leather stools.
+          </p>
+          <p class="introduction__story--sub">
+            And Hernandez liked it that way, "Maybe I'm wrong," he said. "I'm
+            just old school."
+          </p>
+        </div>
+        <div class="introduction__image-box--2">
+          <img
+            src="/assets/img/restaurant.jpg"
+            alt=""
+            class="introduction__image"
+          />
         </div>
       </div>
     </section>
