Added the statistics of introduction section.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <img
             src="/assets/img/logo-white.jpg"
             alt=""
-            class="introduction__image"
+            class="introduction__image introduction__image"
           />
         </div>
         <div class="introduction__details introduction__details--1">
@@ -230,6 +230,12 @@
             class="introduction__image"
           />
         </div>
+      </div>
+      <div class="introduction__statistics">
+        <p class="introduction__stat introduction__year">open since</p>
+        <p class="introduction__stat introduction__locations">locations</p>
+        <p class="introduction__stat introduction__bellies">full bellies</p>
+        <p class="introduction__stat introduction__salads">salads made</p>
       </div>
     </section>
     <section class="section-restaurant">
